@@ -11,20 +11,20 @@
 len	SETA :LEN:"$ccodes"
 i	SETA 0
 	WHILE i < len
-	DCB :CC_ENCODING: (("$ccodes" :RIGHT:(len - i)) :LEFT: 2)
+	DCD :CC_ENCODING: (("$ccodes" :RIGHT:(len - i)) :LEFT: 2)
 i	SETA i + 2
 	WEND
 	MEND
 
 	CCEnc "EQNECSCCMIPLVSVCHILSGELTGTLEALNVHSLO"
 	CCEnc "eqnecsccmiplvsvchilsgeltgtlealnvhslo"
-	DCB :CC_ENCODING: ""
+	DCD :CC_ENCODING: ""
 
 	|
 
-	DCB 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 2, 3
-	DCB 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 2, 3
-	DCB 14
+	DCD 0<<24, 1<<24, 2<<24, 3<<24, 4<<24, 5<<24, 6<<24, 7<<24, 8<<24, 9<<24, 10<<24, 11<<24, 12<<24, 13<<24, 14<<24, 15<<24, 2<<24, 3<<24
+	DCD 0<<24, 1<<24, 2<<24, 3<<24, 4<<24, 5<<24, 6<<24, 7<<24, 8<<24, 9<<24, 10<<24, 11<<24, 12<<24, 13<<24, 14<<24, 15<<24, 2<<24, 3<<24
+	DCD 14<<24
 
 	]
 
